# Skillogy

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.test.json  vitest.config.ts
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml
.omc/: .project-memory.json.tmp.90ae2fc4-59d8-4499-9d61-7ca9d0766407  prd.json  progress.txt  project-memory.json
.omc/specs/: deep-interview-skill-trigger-graph.md
bench/: __init__.py  __main__.py  claude_runner.py  eval_set.py  runner.py
bench/data/: eval-testbed.jsonl
commands/: reindex.md  setup.md  status.md
hooks/: hooks.json
legacy-python/: Makefile  docker-compose.yml
legacy-python/bench/: __main__.py  chart.py  eval_set.py  runner.py
legacy-python/bench/results/: haiku_20260426_195013_results.json  haiku_20260426_195013_summary.json  opus_20260426_193531_results.json  opus_20260426_193531_summary.json  sonnet_20260426_194306_results.json  sonnet_20260426_194306_summary.json
presentation/: build.py  skillogy.pptx
research/: 01-problem-validation.md  02-benchmark-plan.md
scripts/: bench-home-setup.sh  build.mjs  skill-router-hook.sh  skillogy-bootstrap.sh  skillogy-cli.sh  skillogy-hook.sh  state-set.mjs  test-install.sh
src/adapters/: hook.ts  mcp_server.ts  web_api.ts
src/cli/: index.ts
src/core/: extractor.ts  graph.ts  router.ts
src/domain/: types.ts
src/infra/: budget.ts  db.ts  health.ts  llm.ts  scanner.ts  userState.ts
src/skill_router/: __init__.py  __main__.py
src/skillogy/: __main__.py
tests/: budget.test.ts  cold-start-ux.test.ts  conftest.py  extractor.test.ts  graph.test.ts  hook-budget.test.ts  hook.test.ts  llm.test.ts  router.test.ts  scanner.test.ts  userState.test.ts
web/: package-lock.json  package.json
web/.omc/: project-memory.json
web/src/: App.tsx  cytoscape-shims.d.ts  index.css
(+51 files in other folders)
